Small kludge: force heat pipes to render connected to furnaces